# drf-ecs

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.tests  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: unit_tests.yml
service_configs/: gunicorn.py
src/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
src/demo_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/demo_proj/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
src/demo_task_app/: tasks.py  views.py
terraform/: .terraform.lock.hcl  main.tf
tests/: test_simple.py  unit_tests.sh
