[tool.poetry]
name = "demo_django_app"
version = "0.1.0"
description = ""
authors = ["banananeer <banananeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-rest-framework = "^0.1.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
celery = {extras = ["redis"], version = "^5.1.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
