[tool.poetry]
name = "demo_django_app"
version = "0.1.0"
description = ""
authors = ["banananeer <banananeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-rest-framework = "^0.1.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
celery = {extras = ["redis"], version = "^5.1.2"}
django-celery-beat = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | terraform
  | venv
)/
'''